Sun Jul 27 15:39:21 UTC 2014  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          If we are building ACE/TAO/CIAO/whatever for a target other than
          the build host, we certainly shouln't be looking in the host
          library directories to verify the existance of a library
          for the purposes of the LIBCHECK step.

          This introduces two new variables that a user may optionally
          set to control where we look: LIBCHECK_PREFIX, onto which we
          append /lib and /lib64 (e.g., $(LIBCHECK_PREFIX)/lib), which
          defaults to /usr; LIBCHECK_EXTRA_PATHS, which allows the
          user to specify extra places to look when we are seeking
          to confirm the existance of libraries.

Sat Jul 26 17:57:48 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Mention ACE::make_event_handler<T>

        * include/makeinclude/platform_android.GNU:
          Corrected compiler prefix for x86, thanks to David Lifshitz
          <dlifshitz at macadamian dot com> for reporting this

Thu Jul  3 10:47:48 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event_Handler.h:
          Introduce ACE::make_event_handler<T> factory method which
          is enabled when we have C++11 support. This is similar to
          std::make_unique and std::make_shared, but can be used
          to allocate ACE_Event_Handler instances and directly
          assign them to a ACE_Event_Handler_var

        * tests/Bug_2820_Regression_Test.cpp:
          Use the new ACE::make_event_handler<T>

        * ace/OS_NS_stdio.inl:
        * ace/config-win32-msvc-14.h:
          msvc14 has C99 compliant vsnprintf/vsnwprintf

        * ace/Dev_Poll_Reactor.cpp:
        * ace/Get_Opt.cpp:
        * ace/MMAP_Memory_Pool.cpp:
        * ace/SOCK_Dgram_Bcast.cpp:
        * ace/Select_Reactor_Base.cpp:
        * ace/Service_Gestalt.cpp:
        * ace/Sock_Connect.cpp: